Fix apps page footer shrinking/overlap for small window sizes.
This CL shrinks the logo instead of hiding the nav dots and makes the
nav dots shrink to the same size by using the new*** flexbox spec. It
also delays dot layout until the footer logo is loaded as this is
necessary for accurate measurements.

BUG=332350

Review URL: https://codereview.chromium.org/128013002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@244486 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 1f114854befd4da2326955ebbfb23e42fa3a7af5

--- a/chrome/browser/resources/ntp4/nav_dot.css
+++ b/chrome/browser/resources/ntp4/nav_dot.css
@@ -10,7 +10,7 @@
   -webkit-box-flex: 1;
   /* Center child dots. */
   -webkit-box-pack: center;
-  display: -webkit-box;
+  display: -webkit-flex;
   height: 100%;
   list-style-type: none;
   margin: 0;
@@ -22,7 +22,6 @@ html.starting-up #dot-list {
 }
 
 .dot {
-  -webkit-box-flex: 1;
   -webkit-margin-end: 10px;
   -webkit-padding-start: 2px;
   -webkit-transition: -webkit-margin-end 250ms, max-width 250ms, opacity 250ms;
