--- a/chrome/browser/resources/ntp4/new_tab.css
+++ b/chrome/browser/resources/ntp4/new_tab.css
@@ -191,6 +191,7 @@ html[dir='rtl'] #attribution {
 #logo-img {
   display: inline-block;
   margin-top: 4px;
+  overflow: hidden;
   position: relative;
 }
 
